infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ticketing-expiration-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ticketing-expiration
    template:
        metadata:
            labels:
                app: ticketing-expiration
        spec:
            containers:
                - name: ticketing-expiration
                  image: refaey99/ticketing-expiration
