infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ticketing-nats-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ticketing-nats
    template:
        metadata:
            labels:
                app: ticketing-nats
        spec:
            containers:
                - name: ticketing-nats
                  image: nats-streaming:0.17.0
                  args: [
                          '-p',
                          '4222',
                          '-m',
                          '8222',
                          '-hbi', # heartbeat -> healthcheck (a request sent to the clients periodically)
                          '5s',
                          '-hbt', # how long each client has to respond
                          '5s',
                          '-hbf', # number of times that client has to fail before NATS assume it has went off
                          '2',
                          '-SD',
                          '-cid',
                          'ticketing',
                      ]
---
apiVersion: v1
kind: Service
metadata:
    name: ticketing-nats-srv
spec:
    selector:
        app: ticketing-nats
    ports:
        - name: client
          protocol: TCP
          port: 4222
          targetPort: 4222
        - name: monitoring
          protocol: TCP
          port: 8222
          targetPort: 8222
