infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ticketing-orders-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ticketing-orders
    template:
        metadata:
            labels:
                app: ticketing-orders
        spec:
            containers:
                - name: ticketing-orders
                  image: refaey99/ticketing-orders
---
apiVersion: v1
kind: Service
metadata:
    name: ticketing-orders-srv
spec:
    selector:
        app: ticketing-orders
    ports:
        - name: ticketing-orders
          protocol: TCP
          port: 3000
          targetPort: 3000
