infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ticketing-payments-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ticketing-payments
    template:
        metadata:
            labels:
                app: ticketing-payments
        spec:
            containers:
                - name: ticketing-payments
                  image: refaey99/ticketing-payments
---
apiVersion: v1
kind: Service
metadata:
    name: ticketing-payments-srv
spec:
    selector:
        app: ticketing-payments
    ports:
        - name: ticketing-payments
          protocol: TCP
          port: 3000
          targetPort: 3000
