infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ticketing-tickets-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ticketing-tickets
    template:
        metadata:
            labels:
                app: ticketing-tickets
        spec:
            containers:
                - name: ticketing-tickets
                  image: refaey99/ticketing-tickets
---
apiVersion: v1
kind: Service
metadata:
    name: ticketing-tickets-srv
spec:
    selector:
        app: ticketing-tickets
    ports:
        - name: ticketing-tickets
          protocol: TCP
          port: 3000
          targetPort: 3000
